# landfill

./: .clang_complete  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
include/landfill/: types.h
src/: landfill.cpp  types.cpp
test/: CMakeLists.txt  completeness.cpp  definitions.cpp  definitions.h  inheritance.cpp  strong_pointer.cpp  weak_pointer.cpp
