cmake_minimum_required(VERSION 3.7)
project(Landfill)
file(GLOB_RECURSE SRC_FILES "src/*.cpp")
message("Following files are compiled into library:")
foreach(LOOP_VAR IN LISTS SRC_FILES)
  message("${LOOP_VAR}")
endforeach(LOOP_VAR)
add_library(landfill SHARED "${SRC_FILES}")
target_compile_options(landfill PUBLIC "-Wall" "-Wextra" "-std=c++14")
target_include_directories(landfill PUBLIC include)

add_subdirectory("app")
enable_testing()
add_subdirectory("test")
